k8s/agenda-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agenda-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agenda-service
  template:
    metadata:
      labels:
        app: agenda-service
    spec:
      containers:
      - name: agenda-service
        image: agenda-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8084
