k8s/mail-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      containers:
        - name: mail-service
          image: mail_service-mail-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
