k8s/ticket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-service
  template:
    metadata:
      labels:
        app: ticket-service
    spec:
      containers:
        - name: ticket-service
          image: ticket_service-ticket-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
