k8s/agenda-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agenda-service
spec:
  type: ClusterIP
  selector:
    app: agenda-service
  ports:
  - port: 8084
    targetPort: 8084
    # nodePort: 30005
