k8s/event-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service
spec:
  type: ClusterIP
  selector:
    app: event-service
  ports:
  - port: 8083
    targetPort: 8083
    # nodePort: 30004
