k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: NodePort
  selector:
    app: gateway-service
  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 30007
