k8s/mail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
  type: ClusterIP
  selector:
    app: mail-service
  ports:
  - port: 8081
    targetPort: 8081
    # nodePort: 30002
