k8s/ticket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
spec:
  type: NodePort
  selector:
    app: ticket-service
  ports:
    - port: 8085
      targetPort: 8085
      nodePort: 30006
