k8s/utenti-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: utenti-service
spec:
  type: NodePort
  selector:
    app: utenti-service
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001
